# Haskell-Annah-Library

./: .travis.yml  LICENSE  README.md  annah.cabal  stack.yaml
Prelude/: (&&)  (*)  (+)  (->)  (->).annah  (.)  (|)  (||)  ASCII  ASCIIString  Bin  Bin_  Bool  Bool.annah  Category  Category.annah  Cons  Defer.annah  Eq  Eq.annah  False  Functor.annah  IO.annah  Just  List  List.annah  Maybe  Monad  Monad.annah  Monoid  Monoid.annah  Nat  Nat.annah  Nil  Nil_  Nothing  One  One_  Path  Prod0.annah  (+27 more)
Prelude/(->)/: (<<<)  (<<<).annah  (>>=)  (>>=).annah  (>>>)  (>>>).annah  @  Category  Category.annah  Functor  Functor.annah  Monad  Monad.annah  Monoid  Monoid.annah  comp  comp.annah  map  map.annah  pure  pure.annah
Prelude/ASCII/: (++)  0  concat  concat.annah
Prelude/Bool/: (&&)  (&&).annah  (||)  (||).annah  @  Eq  Eq.annah  False  False.annah  True  True.annah  and  and.annah  if  not  not.annah  or  or.annah  show  show.annah
Prelude/Bytes/: (++)  @  @.annah  concat  concat.annah  empty  empty.annah
Prelude/Cmd/: (>>=)  (>>=).annah  @.annah  Bind  Bind.annah  Functor  Functor.annah  Monad  Monad.annah  Monoid  Monoid.annah  Pure  Pure.annah  embed  embed.annah  lift.annah  map  map.annah  replicateM_  replicateM_.annah  sequence_  sequence_.annah
Prelude/Defer/: @  Functor  Functor.annah  Map  Map.annah  map_  map_.annah
Prelude/Either/: (>>=)  (>>=).annah  @  @.annah  Eq  Eq.annah  Left  Left.annah  Monad.annah  Right  Right.annah  map  map.annah  pure  run  run.annah
Prelude/Functor/: @  @.annah  map  map.annah  void  void.annah
Prelude/IO/: (>>=)  (>>=).annah  =  @  @.annah  CreateFile_  CreateFile_.annah  Download_  Download_.annah  Functor  Functor.annah  GetLine_  GetLine_.annah  Monad  Monad.annah  Pure_  Pure_.annah  PutLine_  PutLine_.annah  TestFile_  TestFile_.annah  createFile  createFile.annah  download  download.annah  get  get.annah  getLine  getLine.annah  map  map.annah  pure  pure.annah  put  put.annah  putLine  putLine.annah  run  run.annah  testFile  (+1 more)
Prelude/List/: (+).annah  (++)  (++).annah  (>>=)  (>>=).annah  0.annah  @.annah  Cons.annah  Eq  Eq.annah  Functor  Functor.annah  Monad  Monad.annah  Nil.annah  all  all.annah  and  any  any.annah  concat  concat.annah  concatMap  concatMap.annah  empty  empty.annah  head  head.annah  init  init.annah  intercalate  intercalate.annah  intersperse  intersperse.annah  last  last.annah  length  length.annah  map  map.annah  (+25 more)
Prelude/Maybe/: (>>=)  (>>=).annah  @  @.annah  Eq  Eq.annah  Functor  Functor.annah  Just  Just.annah  Monad  Monad.annah  Nothing  Nothing.annah  first  first.annah  last  last.annah  map  map.annah  pure  pure.annah  run.annah
Prelude/Message/: @  @.annah  Done  Done.annah  Line  Line.annah  fold  fold.annah
Prelude/Monad/: (<=<)  (<=<).annah  (=<<)  (=<<).annah  (>=>)  (>=>).annah  (>>=)  (>>=).annah  @  forM  forM.annah  forM_  forM_.annah  join  join.annah  mapM  mapM.annah  mapM_  mapM_.annah  replicateM  replicateM.annah  replicateM_  replicateM_.annah  sequence  sequence.annah  sequence_  sequence_.annah
Prelude/Monoid/: @  mappend  mappend.annah  mempty  mempty.annah
Prelude/Nat/: (*)  (*).annah  (+)  (+).annah  @  @.annah  Succ  Succ.annah  Zero  Zero.annah  foldNat  foldNat.annah  prod  prod.annah  sum  sum.annah
Prelude/Path/: End  End.annah  Step  Step.annah
Prelude/Prod0/: Eq  Eq.annah  Make.annah
Prelude/Prod1/: @.annah  Eq  Eq.annah  Make.annah
Prelude/Prod1/_1/: (>>=)  (>>=).annah  Functor  Functor.annah  Monad  Monad.annah  map  map.annah  pure  pure.annah
Prelude/Prod2/: @.annah  Eq  Eq.annah  Make  Make.annah
Prelude/Prod2/_1/: (>>=)  (>>=).annah  Functor  Functor.annah  Monad  Monad.annah  map  map.annah  pure  pure.annah
Prelude/Prod2/_2/: (>>=)  (>>=).annah  Functor  Functor.annah  Monad  Monad.annah  map  map.annah  pure  pure.annah
Prelude/String/: (++)  @.annah  concat  concat.annah
Prelude/Sum0/: @  Eq  Eq.annah
Prelude/Sum1/: @  @.annah  Eq  Eq.annah
Prelude/Sum1/Make1/: (>>=)  (>>=).annah  @  @.annah  Functor  Functor.annah  Monad  Monad.annah  map  map.annah  pure
Prelude/Sum2/: @  @.annah  Eq  Eq.annah  Make1.annah
Prelude/Sum2/Make1/: (>>=)  (>>=).annah  @  @.annah  Functor  Functor.annah  Monad  Monad.annah  map  map.annah  pure
Prelude/Sum2/Make2/: (>>=)  (>>=).annah  @  @.annah  Functor  Functor.annah  Monad  Monad.annah  map  map.annah  pure
exec/: Main.hs  Nordom.hs
src/Annah/: .Parser.y.swp  Core.hs  Desugar.hs  Error.hs  Haskell.hs  Import.hs  Lexer.x  Parser.hs  Parser.y  Pretty.hs  Sugar.hs  Syntax.hs  Tutorial.hs
