Name: annah
Version: 1.0.0
Cabal-Version: >=1.8.0.2
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Annah-Library/issues
Synopsis: Distributed programming language that desugars to Morte
Description: Annah is a statically typed and purely functional language built
    for distributed programming.
Category: Compiler
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Annah-Library

Library
    Hs-Source-Dirs: src
    Build-Depends:
        base                 >= 4        && < 5   ,
        array                >= 0.4.0.0  && < 0.6 ,
        lens-family-core     >= 1.0.0    && < 1.3 ,
        morte                >= 1.3.1    && < 1.4 ,
        pipes                >= 4.0.0    && < 4.2 ,
        system-filepath      >= 0.3.1    && < 0.5 ,
        text                 >= 0.11.1.0 && < 1.3 ,
        transformers         >= 0.2.0.0  && < 0.5 ,
        turtle               >= 1.2      && < 1.3
    Exposed-Modules:
        Annah.Core,
        Annah.Haskell,
        Annah.Lexer,
        Annah.Parser
--      Annah.Tutorial
    Build-Tools: alex, happy
    GHC-Options: -O2

Executable annah
    Hs-Source-Dirs: exec
    Main-Is: Main.hs
    Build-Depends:
        base                 >= 4        && < 5   ,
        annah                                     ,
        morte                >= 1.3.1    && < 1.4 ,
        optparse-applicative                < 0.12,
        text                 >= 0.11.1.0 && < 1.3
